[package]
name = "stm32f7x9-hal"
version = "0.2.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7x9 familiy of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "stm32f769", "hal"]
license = "Apache-2.0"
repository = "https://github.com/kamiyaowl/stm32f7x9-hal"
documentation = "https://docs.rs/stm32f7x9-hal"
readme = "README.md"

[dependencies]
cortex-m-rt = "0.6.8"
nb = "0.1.1"

[dependencies.cortex-m]
features = ["const-fn"]
version = "0.6.0"

[dependencies.stm32f7]
version = "0.8.0"
features = ["stm32f7x9", "rt"]

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[features]
rt = ["stm32f7/rt"]
